# gradual-sucidie-rs

client/: .Cargo.toml.swp  Cargo.toml  Web.toml
client/src/: .gui.rs.swp  .main.rs.swo  .main.rs.swp  .text_input.rs.swp  .websocket.rs.swo  .websocket.rs.swp  AssetManager.rs  assetmanager.rs  assets.rs  communicate.rs  gui.rs  main.rs  scene.rs  text_input.rs  websocket.rs
client/src/naive_gui/: Cargo.toml
client/src/naive_gui/examples/: simplest.rs
client/src/naive_gui/src/: .lib.rs.swo  .lib.rs.swp  .widget.rs.swo  .widget.rs.swp  lib.rs  widget.rs
client/static/: .index.html.swp  index.html
client/static/css/: grid.css
client/static/js/: touch2mouse.js  viewporter.js
common/: Cargo.toml
common/src/: .lib.rs.swp  .protocol.rs.swp  lib.rs  protocol.rs
common/src/model/: mod.rs
server/: .Cargo.toml.swp  Cargo.toml
server/src/: .main.rs.swo  .main.rs.swp  main.rs
server/src/Packet/: Cargo.toml
server/src/Packet/src/: lib.rs
server/src/model/: .mod.rs.swp
