[package]
name = "client"
version = "0.1.0"
authors = ["Eunchul Song <song9446@unist.ac.kr>"]
edition = "2018"

[dependencies]
quicksilver = "*"
naive_gui = {path= "src/naive_gui"}
common = {path="../common"}
[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "*"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ws = "*"
